--- a/raskell.cabal
+++ b/raskell.cabal
@@ -59,7 +59,8 @@ executable raskell
   -- Other library packages from which modules are imported.
   build-depends:
     base >=4.7 && <4.8,
-    parsec ==3.1.*
+    parsec ==3.1.*,
+    hspec ==2.1.*
 
   -- Directories containing source files.
   -- hs-source-dirs:
@@ -67,3 +68,15 @@ executable raskell
   -- Base language which the package is written in.
   default-language:    Haskell2010
 
+
+test-suite spec
+  type: exitcode-stdio-1.0
+
+  hs-source-dirs: test
+
+  main-is: Spec.hs
+
+  build-depends: base  == 4.*
+               , hspec >= 1.3
+
+  default-language:    Haskell2010
