--- a/raskell.cabal
+++ b/raskell.cabal
@@ -57,10 +57,8 @@ executable raskell
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:
-    base >=4.7 && <4.8,
-    parsec ==3.1.*,
-    hspec ==2.1.*
+  build-depends: base >=4.7 && <4.8
+               , parsec ==3.1.*
 
   -- Directories containing source files.
   hs-source-dirs:
@@ -79,5 +77,6 @@ test-suite spec
 
   build-depends: base  == 4.*
                , hspec >= 1.3
+               , parsec ==3.1.*
 
   default-language:    Haskell2010
