--- a/raskell.cabal
+++ b/raskell.cabal
@@ -47,8 +47,8 @@ executable raskell
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
-  ghc-options:
-    -Wall
+  -- ghc-options:
+  --   -Wall
 
   -- Modules included in this executable, other than Main.
   -- other-modules:
@@ -57,8 +57,9 @@ executable raskell
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends: base >=4.7 && <4.8
+  build-depends: base >=4.7
                , parsec ==3.1.*
+               , containers >= 0.0
 
   -- Directories containing source files.
   hs-source-dirs:
@@ -69,14 +70,19 @@ executable raskell
 
 
 test-suite spec
+  ghc-options:
+
   type: exitcode-stdio-1.0
 
-  hs-source-dirs: test
+  hs-source-dirs:
+    src
+    test
 
   main-is: Spec.hs
 
-  build-depends: base  == 4.*
+  build-depends: base  >= 4.7
                , hspec >= 1.3
                , parsec ==3.1.*
+               , containers >= 0.0
 
   default-language:    Haskell2010
