Compiling 'ruby' instead of 'raskell'
Also giving an error for interactive mode (no args)

--- a/raskell.cabal
+++ b/raskell.cabal
@@ -43,7 +43,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 
-executable raskell
+executable ruby
   -- .hs or .lhs file containing the Main module.
   main-is:             Main.hs
 
