Fixed my name :)

--- a/raskell.cabal
+++ b/raskell.cabal
@@ -22,11 +22,11 @@ license:             MIT
 license-file:        LICENSE
 
 -- The package author(s).
-author:              Josh Szmajda
+author:              Jessica Szmajda
 
 -- An email address to which users can send suggestions, bug reports, and
 -- patches.
-maintainer:          joshsz@gmail.com
+maintainer:          jess.szmajda@gmail.com
 
 -- A copyright notice.
 -- copyright:
